// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should hide edit, delete, and stage for members 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -2,11 +2,11 @@
    hideHeader={[Function hideHeader]}
    interpolatedHeaderTranslation={[Function interpolatedHeaderTranslation]}
    showHeader={[Function showHeader]}
    style={
      Object {
-       \\"height\\": 304,
+       \\"height\\": 287,
        \\"left\\": 0,
        \\"paddingTop\\": 0,
        \\"position\\": \\"absolute\\",
        \\"right\\": 0,
        \\"top\\": 0,
@@ -121,39 +121,12 @@
                  \\"alignItems\\": \\"flex-end\\",
                  \\"flex\\": 1,
                  \\"justifyContent\\": \\"center\\",
                },
              ]
-           }
-         >
-           <View
-             accessible={true}
-             focusable={true}
-             onClick={[Function onClick]}
-             onResponderGrant={[Function onResponderGrant]}
-             onResponderMove={[Function onResponderMove]}
-             onResponderRelease={[Function onResponderRelease]}
-             onResponderTerminate={[Function onResponderTerminate]}
-             onResponderTerminationRequest={[Function onResponderTerminationRequest]}
-             onStartShouldSetResponder={[Function onStartShouldSetResponder]}
-             style={
-               Object {
-                 \\"opacity\\": 1,
-               }
-             }
-             testID=\\"popupMenuButton\\"
-           >
-             <SvgMock
-               color=\\"#ffffff\\"
-               style={
-                 Object {
-                   \\"paddingHorizontal\\": 24,
            }
-               }
          />
-           </View>
-         </View>
        </View>
      </RCTSafeAreaView>
      <View
        style={
          Object {
@@ -197,27 +170,10 @@
              \\"marginTop\\": 12,
            }
          }
        >
          Hayden Zieme
-       </Text>
-       <Text
-         style={
-           Object {
-             \\"color\\": \\"#ffffff\\",
-             \\"fontFamily\\": \\"SourceSansPro-Regular\\",
-             \\"fontSize\\": 14,
-             \\"fontStyle\\": \\"normal\\",
-             \\"fontWeight\\": \\"bold\\",
-             \\"letterSpacing\\": 1,
-             \\"lineHeight\\": 18,
-             \\"marginTop\\": 4,
-             \\"textTransform\\": \\"uppercase\\",
-           }
-         }
-       >
-         CONSEQUUNTUR CORPORIS REPELLAT
        </Text>
      </View>
      <RCTScrollView
        bounces={false}
        contentContainerStyle={"
`;

exports[`should load person data correctly 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -160,49 +160,33 @@
            \\"alignItems\\": \\"center\\",
            \\"marginBottom\\": 24,
          }
        }
      >
-       <View
-         style={
-           Array [
+       <Image
+         resizeMode=\\"cover\\"
+         source={
            Object {
-               \\"alignItems\\": \\"center\\",
-               \\"justifyContent\\": \\"center\\",
-             },
+             \\"uri\\": \\"quisquam recusandae alias\\",
+           }
+         }
+         style={
            Array [
              Object {
                \\"borderRadius\\": 48,
                \\"height\\": 96,
                \\"width\\": 96,
              },
              Object {
-                 \\"backgroundColor\\": \\"#B4B6BA\\",
+               \\"backgroundColor\\": \\"rgb(135, 123, 115)\\",
              },
              Object {
                \\"marginTop\\": -30,
              },
-             ],
            ]
          }
-       >
-         <Text
-           style={
-             Array [
-               Object {
-                 \\"color\\": \\"#ffffff\\",
-               },
-               Object {
-                 \\"fontSize\\": 64,
-                 \\"fontWeight\\": \\"300\\",
-               },
-             ]
-           }
-         >
-           
-         </Text>
-       </View>
+       />
        <Text
          style={
            Object {
              \\"color\\": \\"#ffffff\\",
              \\"fontFamily\\": \\"SourceSansPro-Light\\",
@@ -211,11 +195,13 @@
              \\"fontWeight\\": \\"300\\",
              \\"lineHeight\\": 30,
              \\"marginTop\\": 12,
            }
          }
-       />
+       >
+         Hayden Zieme
+       </Text>
        <Text
          style={
            Object {
              \\"color\\": \\"#ffffff\\",
              \\"fontFamily\\": \\"SourceSansPro-Regular\\",
@@ -226,11 +212,13 @@
              \\"lineHeight\\": 18,
              \\"marginTop\\": 4,
              \\"textTransform\\": \\"uppercase\\",
            }
          }
-       />
+       >
+         CONSEQUUNTUR CORPORIS REPELLAT
+       </Text>
      </View>
      <RCTScrollView
        bounces={false}
        contentContainerStyle={
          Object {"
`;

exports[`should render loading 1`] = `
<View
  hideHeader={[Function]}
  interpolatedHeaderTranslation={[Function]}
  showHeader={[Function]}
  style={
    Object {
      "height": 304,
      "left": 0,
      "paddingTop": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
      "transform": Array [
        Object {
          "translateY": 0,
        },
      ],
      "zIndex": 1,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#007398",
      }
    }
  >
    <RCTSafeAreaView
      emulateUnlessSupported={true}
      style={
        Object {
          "backgroundColor": "transparent",
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "flexDirection": "row",
              "height": 56,
              "paddingTop": 0,
            },
            undefined,
            null,
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "paddingLeft": 5,
              },
              Object {
                "alignItems": "flex-start",
                "flex": 1,
                "justifyContent": "center",
              },
            ]
          }
        >
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
            testID="BackButton"
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "transparent",
                    "borderRadius": 0,
                    "borderWidth": 0,
                    "height": 60,
                    "justifyContent": "center",
                    "margin": 0,
                    "paddingHorizontal": 20,
                    "paddingVertical": 10,
                  },
                  null,
                  Array [
                    Object {
                      "alignItems": "flex-start",
                      "alignSelf": "flex-start",
                      "justifyContent": "center",
                    },
                    undefined,
                  ],
                  null,
                ]
              }
            >
              <SvgMock
                color="#ffffff"
              />
            </View>
          </View>
        </View>
        <View
          style={
            Array [
              Object {
                "paddingRight": 5,
              },
              Object {
                "alignItems": "flex-end",
                "flex": 1,
                "justifyContent": "center",
              },
            ]
          }
        >
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
            testID="popupMenuButton"
          >
            <SvgMock
              color="#ffffff"
              style={
                Object {
                  "paddingHorizontal": 24,
                }
              }
            />
          </View>
        </View>
      </View>
    </RCTSafeAreaView>
    <View
      style={
        Object {
          "alignItems": "center",
          "marginBottom": 24,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "justifyContent": "center",
            },
            Array [
              Object {
                "borderRadius": 48,
                "height": 96,
                "width": 96,
              },
              Object {
                "backgroundColor": "#B4B6BA",
              },
              Object {
                "marginTop": -30,
              },
            ],
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#ffffff",
              },
              Object {
                "fontSize": 64,
                "fontWeight": "300",
              },
            ]
          }
        >
          
        </Text>
      </View>
      <Text
        style={
          Object {
            "color": "#ffffff",
            "fontFamily": "SourceSansPro-Light",
            "fontSize": 24,
            "fontStyle": "normal",
            "fontWeight": "300",
            "lineHeight": 30,
            "marginTop": 12,
          }
        }
      />
      <Text
        style={
          Object {
            "color": "#ffffff",
            "fontFamily": "SourceSansPro-Regular",
            "fontSize": 14,
            "fontStyle": "normal",
            "fontWeight": "bold",
            "letterSpacing": 1,
            "lineHeight": 18,
            "marginTop": 4,
            "textTransform": "uppercase",
          }
        }
      />
    </View>
    <RCTScrollView
      bounces={false}
      contentContainerStyle={
        Object {
          "backgroundColor": "#ffffff",
          "height": 50,
          "minWidth": "100%",
        }
      }
      horizontal={true}
      showsHorizontalScrollIndicator={false}
    >
      <View>
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "flexGrow": 1,
              "justifyContent": "center",
              "minWidth": 100,
              "opacity": 1,
              "paddingHorizontal": 12,
            }
          }
        >
          <Text
            numberOfLines={1}
            style={
              Object {
                "color": "#505256",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 16,
                "fontStyle": "normal",
                "fontWeight": "normal",
                "lineHeight": 24,
              }
            }
          >
            Steps
          </Text>
        </View>
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "flexGrow": 1,
              "justifyContent": "center",
              "minWidth": 100,
              "opacity": 1,
              "paddingHorizontal": 12,
            }
          }
        >
          <Text
            numberOfLines={1}
            style={
              Object {
                "color": "#505256",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 16,
                "fontStyle": "normal",
                "fontWeight": "normal",
                "lineHeight": 24,
              }
            }
          >
            Notes
          </Text>
        </View>
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "flexGrow": 1,
              "justifyContent": "center",
              "minWidth": 100,
              "opacity": 1,
              "paddingHorizontal": 12,
            }
          }
        >
          <Text
            numberOfLines={1}
            style={
              Object {
                "color": "#505256",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 16,
                "fontStyle": "normal",
                "fontWeight": "normal",
                "lineHeight": 24,
              }
            }
          >
            Journey
          </Text>
        </View>
      </View>
    </RCTScrollView>
  </View>
</View>
`;

exports[`should render me loading 1`] = `
<View
  hideHeader={[Function]}
  interpolatedHeaderTranslation={[Function]}
  showHeader={[Function]}
  style={
    Object {
      "height": 304,
      "left": 0,
      "paddingTop": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
      "transform": Array [
        Object {
          "translateY": 0,
        },
      ],
      "zIndex": 1,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#007398",
      }
    }
  >
    <RCTSafeAreaView
      emulateUnlessSupported={true}
      style={
        Object {
          "backgroundColor": "transparent",
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "flexDirection": "row",
              "height": 56,
              "paddingTop": 0,
            },
            undefined,
            null,
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "paddingLeft": 5,
              },
              Object {
                "alignItems": "flex-start",
                "flex": 1,
                "justifyContent": "center",
              },
            ]
          }
        >
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
            testID="BackButton"
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "transparent",
                    "borderRadius": 0,
                    "borderWidth": 0,
                    "height": 60,
                    "justifyContent": "center",
                    "margin": 0,
                    "paddingHorizontal": 20,
                    "paddingVertical": 10,
                  },
                  null,
                  Array [
                    Object {
                      "alignItems": "flex-start",
                      "alignSelf": "flex-start",
                      "justifyContent": "center",
                    },
                    undefined,
                  ],
                  null,
                ]
              }
            >
              <SvgMock
                color="#ffffff"
              />
            </View>
          </View>
        </View>
        <View
          style={
            Array [
              Object {
                "paddingRight": 5,
              },
              Object {
                "alignItems": "flex-end",
                "flex": 1,
                "justifyContent": "center",
              },
            ]
          }
        >
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
            testID="editButton"
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "transparent",
                    "borderRadius": 0,
                    "borderWidth": 0,
                    "height": 60,
                    "justifyContent": "center",
                    "margin": 0,
                    "paddingHorizontal": 20,
                    "paddingVertical": 10,
                  },
                  null,
                  Object {},
                  null,
                ]
              }
            >
              <SvgMock
                color="#ffffff"
              />
            </View>
          </View>
        </View>
      </View>
    </RCTSafeAreaView>
    <View
      style={
        Object {
          "alignItems": "center",
          "marginBottom": 24,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "justifyContent": "center",
            },
            Array [
              Object {
                "borderRadius": 48,
                "height": 96,
                "width": 96,
              },
              Object {
                "backgroundColor": "#B4B6BA",
              },
              Object {
                "marginTop": -30,
              },
            ],
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#ffffff",
              },
              Object {
                "fontSize": 64,
                "fontWeight": "300",
              },
            ]
          }
        >
          
        </Text>
      </View>
      <Text
        style={
          Object {
            "color": "#ffffff",
            "fontFamily": "SourceSansPro-Light",
            "fontSize": 24,
            "fontStyle": "normal",
            "fontWeight": "300",
            "lineHeight": 30,
            "marginTop": 12,
          }
        }
      />
      <Text
        style={
          Object {
            "color": "#ffffff",
            "fontFamily": "SourceSansPro-Regular",
            "fontSize": 14,
            "fontStyle": "normal",
            "fontWeight": "bold",
            "letterSpacing": 1,
            "lineHeight": 18,
            "marginTop": 4,
            "textTransform": "uppercase",
          }
        }
      />
    </View>
    <RCTScrollView
      bounces={false}
      contentContainerStyle={
        Object {
          "backgroundColor": "#ffffff",
          "height": 50,
          "minWidth": "100%",
        }
      }
      horizontal={true}
      showsHorizontalScrollIndicator={false}
    >
      <View>
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "flexGrow": 1,
              "justifyContent": "center",
              "minWidth": 100,
              "opacity": 1,
              "paddingHorizontal": 12,
            }
          }
        >
          <Text
            numberOfLines={1}
            style={
              Object {
                "color": "#505256",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 16,
                "fontStyle": "normal",
                "fontWeight": "normal",
                "lineHeight": 24,
              }
            }
          >
            Steps
          </Text>
        </View>
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "flexGrow": 1,
              "justifyContent": "center",
              "minWidth": 100,
              "opacity": 1,
              "paddingHorizontal": 12,
            }
          }
        >
          <Text
            numberOfLines={1}
            style={
              Object {
                "color": "#505256",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 16,
                "fontStyle": "normal",
                "fontWeight": "normal",
                "lineHeight": 24,
              }
            }
          >
            Notes
          </Text>
        </View>
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignItems": "center",
              "flexGrow": 1,
              "justifyContent": "center",
              "minWidth": 100,
              "opacity": 1,
              "paddingHorizontal": 12,
            }
          }
        >
          <Text
            numberOfLines={1}
            style={
              Object {
                "color": "#505256",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 16,
                "fontStyle": "normal",
                "fontWeight": "normal",
                "lineHeight": 24,
              }
            }
          >
            Journey
          </Text>
        </View>
      </View>
    </RCTScrollView>
  </View>
</View>
`;
